# advent-of-code-2025

./: Cargo.toml  Makefile  README.md  improvements.md
inputs/: day7.txt
src/: day-1-puzzle-1.rs  day-1-puzzle-2.rs  day-2-puzzle-1-improved.rs  day-2-puzzle-1.rs  day-2-puzzle-2-improved.rs  day-2-puzzle-2.rs  lib.rs  utils.rs
src/solutions/: day1-optimized.rs  day1.rs  day2-optimized.rs  day2.rs  day3-improved.rs  day3.rs  day4-improved.rs  day4.rs  day5-improved.rs  day5.rs  day6-improved.rs  day6.rs  day7-improved.rs  day7.rs  template.rs
